--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,7 +9,7 @@ html
   body
     .gtr-header
       .d-flex
-        img(src="/images/gotur_vip_logo_white.png" alt="GÖTÜR")
+        img(src="/images/gotur_vip_logo.png" alt="GÖTÜR")
 
     block content
 
