--- a/public/css/style.css
+++ b/public/css/style.css
@@ -101,9 +101,9 @@ a {
 }
 
 .gtr-header {
-  height: 10vh;
+  height: 15vh;
   width: 100%;
-  background-color: #2660ff;
+  background-color: #d9dadb !important;
   padding: 1rem;
 }
 
