--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,21 +92,121 @@ acronym {
 
 /* CSS RESET */
 
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Quicksand:wght@300..700&display=swap');
+
 body {
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px "Lato", sans-serif !important;
 }
 
-a {
-  color: #00B7FF;
+* {
+  transition: 0.2s all;
 }
 
 .gtr-header {
-  height: 15vh;
+  height: 10vh;
   width: 100%;
-  background-color: #d9dadb !important;
-  padding: 1rem;
+  background-color: #2660ff !important;
+  padding: 1rem 3rem;
+  color: white;
 }
 
 .gtr-header img {
-  width: 20vw;
+  width: 10vw;
+}
+
+a.gtr-link {
+  font-weight: 500;
+  /* text-transform: uppercase; */
+  font-size: 1.25rem;
+  color: white;
+  text-decoration: none;
+  user-select: none;
+  cursor: pointer;
+}
+
+a.gtr-link:hover {
+  color: #e0e0e0;
+}
+
+a.gtr-link:active {
+  color: #c4c4c4;
+  transform: scale(0.95);
+}
+
+.trip {
+  padding: 1rem;
+  border-radius: 5px;
+  border: 1px #2660ff solid;
+  box-shadow: #2660ff 0px 0px 1px;
+  user-select: none;
+  cursor: pointer;
+  position: relative;
+}
+
+.trip:hover {
+  box-shadow: #2660ff 0px 0px 5px;
+  transform: scale(1.01);
+}
+
+.trip:active {
+  box-shadow: #2660ff 0px 0px 3px;
+  transform: scale(0.99);
+}
+
+.trip img {
+  width: 60%;
+  height: 5rem;
+  object-fit: contain;
+}
+
+.trip_time svg {
+  font-size: 1.25rem;
+}
+
+.trip_time span {
+  font-size: 1.5rem;
+}
+
+.trip_route {
+  font-size: 1.5rem;
+  text-align: center;
+  margin: 0;
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: .5rem;
+}
+
+.trip_route svg {
+  font-size: 1.25rem;
+}
+
+.trip_fullness {
+  display: flex;
+  align-items: center;
+}
+
+.trip_fullness span {
+  font-size: 1.5rem;
+}
+
+.trip_pick-button {
+  height: 2rem;
+  font-size: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.trip_chevron {
+  position: absolute;
+  top: .5rem;
+  right: .5rem;
+}
+
+.trip.open .trip_chevron{
+  transform: rotate(180deg);
+}
+
+.trip_content{
+  display: none;
 }
