--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,20 +2,32 @@
 html
   head
     title= title
-    link(rel='stylesheet' href='/css/style.css')
     link(rel='stylesheet' href='/flatpickr/dist/flatpickr.min.css')
     link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css')
-    link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css')
+    link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css')
+    link(rel='stylesheet' href='/css/style.css')
   body
     .gtr-header
-      .d-flex
-        img(src="/images/gotur_vip_logo.png" alt="GÖTÜR")
+      .d-flex.justify-content-between
+        img(src="/images/gotur_vip_logo_white.png" alt="GÖTÜR")
+        .d-flex.gap-3.align-items-center
+          a.gtr-link 
+            i.fa-solid.fa-magnifying-glass.me-1
+            |Biletimi Bul
+          a.gtr-link 
+            i.fa-solid.fa-user-check.me-1
+            |Giriş Yap
+          a.gtr-link 
+            i.fa-solid.fa-user-plus.me-1
+            |Kayıt Ol
 
-    block content
+
+    .container
+      block content
 
     script(src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js")
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/js/all.min.js")
     script(src="https://code.jquery.com/jquery-3.7.1.min.js")
     script(src="/flatpickr/dist/flatpickr.min.js")
     script(src="/flatpickr/dist/l10n/tr.js")
