--- a/views/trips.pug
+++ b/views/trips.pug
@@ -1,6 +1,14 @@
 extends layout
 
 block content
+  .gender-pick.border
+    .d-flex.gap-3
+      .m
+        img(src="/svg/man.svg" alt="koltuk")
+        |ERKEK
+      .f
+        img(src="/svg/woman.svg" alt="koltuk")
+        |KADIN
   .row
     each t in trips 
       .col-4.p-3
@@ -12,12 +20,12 @@ block content
             .d-flex.flex-column.align-items-center
               span.trip_time         
                 i.fa-solid.fa-clock.me-1
-                span 10:00
-              span 1 saat 15 dakika
+                span #{t.time.split(":")[0]}:#{t.time.split(":")[1]}
+              span #{t.duration}
           p.trip_route
-            |Çanakkale
+            |#{t.fromStr}
             i.fa-solid.fa-route.mx-1
-            |Beylikdüzü
+            |#{t.toStr}
           .d-flex.gap-3.align-items-center
             .trip_fullness
               svg(viewBox="0 0 100 100" width="3rem" height="3rem" style="max-width:100px;")
@@ -26,27 +34,31 @@ block content
                 rect(x="15" y="30" width="10" height="40" rx="5" ry="5" fill="#fff" stroke="#333" stroke-width="2")
                 rect(x="20" y="60" width="60" height="20" rx="5" ry="5" fill="#fff" stroke="#333" stroke-width="2")
                 rect(x="35" y="55" width="30" height="30" rx="5" ry="5" fill="#fff" stroke="#333" stroke-width="2")
-              span 8/24
-            button.btn.btn-primary.btn-sm.w-100.trip_pick-button 500 TL
+              span #{t.fullness}
+            button.btn.btn-primary.btn-sm.w-100.trip_pick-button #{t.price}TL
           .trip_content
             .d-flex
               .trip_seat-plan
-                - const plan = "00011110001100111001110011100111001111110000000000000000000000000000000000000000001"
+                - const planBinary = t.busPlanBinary
+                - const plan = t.busPlan
                 - var index = 0
-                - var seatNumber = 1
+                - var seat = 1
                 -for(let i = 0; i < 8; i++){
                   .d-flex
                     -for(let j = 0; j < 5; j++){
-                      if plan[index] == "1"
-                        div(style="position:relative;")
+                      if planBinary[index] == "1"
+                        -const genderColor = t.tickets[seat]?t.tickets[seat].gender == "m" ? "#2986cc" : "#c90076":"#fff"
+                        -const genderColorStroke = t.tickets[seat]?t.tickets[seat].gender == "m" ? "#216396" : "#920256":"#b4b4b4"
+                        -const genderColorText = t.tickets[seat]?t.tickets[seat].gender == "m" ? "#1a4f77" : "#720042":"#1f1f1f"
+                        .trip_seat
                           svg(viewBox="0 0 100 100" width="2.75rem" height="2.75rem" style="max-width:100px;")
-                            rect(x="20" y="20" width="60" height="60" rx="10" ry="10" fill="#fff" stroke="#333" stroke-width="2")
-                            rect(x="75" y="30" width="10" height="40" rx="5" ry="5" fill="#fff" stroke="#333" stroke-width="2")
-                            rect(x="15" y="30" width="10" height="40" rx="5" ry="5" fill="#fff" stroke="#333" stroke-width="2")
-                            rect(x="20" y="60" width="60" height="20" rx="5" ry="5" fill="#fff" stroke="#333" stroke-width="2")
-                            rect(x="35" y="55" width="30" height="30" rx="5" ry="5" fill="#fff" stroke="#333" stroke-width="2")
-                          span(style="position: absolute;top: 40%;left: 50%;transform: translate(-50%, -50%);") #{seatNumber}
-                        -seatNumber++;
+                            rect(x="10" y="10" width="80" height="80" rx="10" ry="10" fill=genderColor stroke=genderColorStroke stroke-width="2")
+                            rect(x="75" y="30" width="20" height="50" rx="5" ry="5" fill=genderColor stroke=genderColorStroke stroke-width="2")
+                            rect(x="5" y="30" width="20" height="50" rx="5" ry="5" fill=genderColor stroke=genderColorStroke stroke-width="2")
+                            rect(x="10" y="70" width="80" height="20" rx="5" ry="5" fill=genderColor stroke=genderColorStroke stroke-width="2")
+                            rect(x="30" y="65" width="40" height="30" rx="5" ry="5" fill=genderColor stroke=genderColorStroke stroke-width="2")
+                          span(style=`position: absolute;top: 40%;left: 50%;transform: translate(-50%, -50%);color:${genderColorText}`) #{plan[index]}
+                        -seat++;
                       else 
                         svg(viewBox="0 0 100 100" width="2.75rem" height="2.75rem" style="visibility:hidden;")
                       -index++;
