--- a/views/trips.pug
+++ b/views/trips.pug
@@ -65,6 +65,7 @@ block content
                     -}
                 -}
               .trip_info.p-1
+                button.trip_confirm-button.btn.btn-sm.btn-primary Onayla
 
 block scripts
   script(src="/js/trips.js")
