--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,10 +6,12 @@ html
     link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css')
     link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css')
     link(rel='stylesheet' href='/css/style.css')
+    block css
   body
     .gtr-header
       .d-flex.justify-content-between
-        img(src="/images/gotur_vip_logo_white.png" alt="GÖTÜR")
+        a.navbar-brand(href="/")
+          img(src="/images/gotur_vip_logo_white.png" alt="GÖTÜR")
         .d-flex.gap-3.align-items-center
           a.gtr-link 
             i.fa-solid.fa-magnifying-glass.me-1
@@ -22,8 +24,7 @@ html
             |Kayıt Ol
 
 
-    .container
-      block content
+    block content
 
     script(src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js")
