--- a/views/index.pug
+++ b/views/index.pug
@@ -1,41 +1,39 @@
 extends layout
 
+block css
+  link(rel='stylesheet' href='/css/index.css')
 block content
-  .trip-finder
-    .d-flex.p-3.gap-3
-      .col-6
-        select.trip-finder_from.form-select(value="")
-          option(value="" disabled selected) Kalkış Seçiniz
-          option(value="17000") Çanakkale
-          option(value="17500") Gelibolu
-          option(value="17900") Eceabat
-          option(value="22800") Keşan
-          option(value="34000") İstanbul
-          option(value="34220") Esenler
-          option(value="34520") Beylikdüzü
-          option(value="34710") Kadıköy
-          option(value="59000") Tekirdağ
-          option(value="59300") Malkara
-          option(value="59740") Marmaraereğlisi
-      .col-6
-        select.trip-finder_to.form-select(value="")
-          option(value="" disabled selected) Varış Seçiniz
-          option(value="17000") Çanakkale
-          option(value="17500") Gelibolu
-          option(value="17900") Eceabat
-          option(value="22800") Keşan
-          option(value="34000") İstanbul
-          option(value="34220") Esenler
-          option(value="34520") Beylikdüzü
-          option(value="34710") Kadıköy
-          option(value="59000") Tekirdağ
-          option(value="59300") Malkara
-          option(value="59740") Marmaraereğlisi
-    .d-flex.p-3.gap-3
-      .col-6
-        input.trip-finder_date.form-control(type="text")
-      .col-6
-        button.trip-finder_search-button.btn.btn-outline-primary.w-100 ARA
+  .position-relative(style="height:30vh;margin-top:1rem;")
+    .h-50(style="background-color:#2660ff")
+    .trip-finder.border
+      select.trip-finder_from.form-select(value="")
+        option(value="" disabled selected) Kalkış Seçiniz
+        option(value="17000") Çanakkale
+        option(value="17500") Gelibolu
+        option(value="17900") Eceabat
+        option(value="22800") Keşan
+        option(value="34000") İstanbul
+        option(value="34220") Esenler
+        option(value="34520") Beylikdüzü
+        option(value="34710") Kadıköy
+        option(value="59000") Tekirdağ
+        option(value="59300") Malkara
+        option(value="59740") Marmaraereğlisi
+      select.trip-finder_to.form-select(value="")
+        option(value="" disabled selected) Varış Seçiniz
+        option(value="17000") Çanakkale
+        option(value="17500") Gelibolu
+        option(value="17900") Eceabat
+        option(value="22800") Keşan
+        option(value="34000") İstanbul
+        option(value="34220") Esenler
+        option(value="34520") Beylikdüzü
+        option(value="34710") Kadıköy
+        option(value="59000") Tekirdağ
+        option(value="59300") Malkara
+        option(value="59740") Marmaraereğlisi
+      input.trip-finder_date.gtr-input(type="text")
+      button.trip-finder_search-button.btn.btn-outline-primary.w-100 ARA
 
 block scripts
   script(src="/js/index.js")
