--- a/views/index.pug
+++ b/views/index.pug
@@ -41,7 +41,11 @@ html
             span
               i.fa-solid.fa-calendar.me-1
               span Ne Zaman?
-            input.trip-finder_date(type="text")
+            .trip-finder_date-wrapper
+              input.trip-finder_date(type="text")
+              .trip-finder_day-buttons
+                button(type="button").trip-finder_day-button(data-day="today") Bugün
+                button(type="button").trip-finder_day-button(data-day="tomorrow") Yarın
           button.trip-finder_search-button ARA
 
   script(src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js")
