--- a/public/css/index.css
+++ b/public/css/index.css
@@ -45,6 +45,8 @@
 
 .trip-finder_day-buttons {
     display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     gap: 0.5rem;
 }
 
@@ -70,6 +72,7 @@
 .trip-finder_date {
     border-radius: 5px;
     border: 2px solid #2660ff9c;
+    width: 13vw;
 }
 
 .trip-finder_change {
