--- a/views/index.pug
+++ b/views/index.pug
@@ -1,57 +1,54 @@
-<!DOCTYPE html>
-html
-  head
-    title= title
-    link(rel='stylesheet' href='/flatpickr/dist/flatpickr.min.css')
-    link(rel='stylesheet' href='/select2/dist/css/select2.min.css')
-    link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css')
-    link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css')
-    link(rel='stylesheet' href='/css/style.css')
-    link(rel='stylesheet' href='/css/index.css')
-  body
-    .gtr-header
-      .d-flex.justify-content-between
-        a.navbar-brand(href="/")
-          img(src="/images/gotur_vip_logo_white.png" alt="GÖTÜR")
-        .d-flex.gap-3.align-items-center
-          a.gtr-link 
-            i.fa-solid.fa-magnifying-glass.me-1
-            |Biletimi Bul
-          a.gtr-link 
-            i.fa-solid.fa-user-check.me-1
-            |Giriş Yap
-          a.gtr-link 
-            i.fa-solid.fa-user-plus.me-1
-            |Kayıt Ol
-      .trip-finder.border
-        .trip-finder_selects
-          .d-flex.flex-column
-            span
-              i.fa-solid.fa-bus-side.me-1
-              span Nereden?
-            input.trip-finder_from(value="" type="text" placeholder="Kalkış Seçin")
-          span.trip-finder_change
-            i.fa-solid.fa-arrow-right-arrow-left
-          .d-flex.flex-column
-            span
-              i.fa-solid.fa-bus-side.me-1
-              span Nereye?
-            input.trip-finder_to(value="" type="text" placeholder="Varış Seçin")
-          .d-flex.flex-column
-            span
-              i.fa-solid.fa-calendar.me-1
-              span Ne Zaman?
-            input.trip-finder_date(type="text")
-          .trip-finder_day-buttons
-            button(type="button").trip-finder_day-button(data-day="today") Bugün
-            button(type="button").trip-finder_day-button(data-day="tomorrow") Yarın
-          button.trip-finder_search-button ARA
+extends layout
 
-  script(src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js")
-  script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js")
-  script(src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/js/all.min.js")
-  script(src="https://code.jquery.com/jquery-3.7.1.min.js")
-  script(src="/select2/dist/js/select2.min.js")
-  script(src="/flatpickr/dist/flatpickr.min.js")
-  script(src="/flatpickr/dist/l10n/tr.js")
-  script(src="/js/index.js")
+include components/place-select
+
+block css
+  link(rel='stylesheet' href='/css/index.css')
+
+block headerContent
+  - const fromValue = typeof fromId !== 'undefined' ? fromId : '';
+  - const toValue = typeof toId !== 'undefined' ? toId : '';
+  .trip-finder.border
+    .trip-finder_selects
+      .d-flex.flex-column
+        span
+          i.fa-solid.fa-bus-side.me-1
+          span Nereden?
+        +placeSelect({
+          placeholder: 'Kalkış Seçin',
+          searchPlaceholder: 'Ara...',
+          input: {
+            class: 'trip-finder_from',
+            name: 'from',
+            value: fromValue
+          }
+        })
+      span.trip-finder_change
+        i.fa-solid.fa-arrow-right-arrow-left
+      .d-flex.flex-column
+        span
+          i.fa-solid.fa-bus-side.me-1
+          span Nereye?
+        +placeSelect({
+          placeholder: 'Varış Seçin',
+          searchPlaceholder: 'Ara...',
+          input: {
+            class: 'trip-finder_to',
+            name: 'to',
+            value: toValue
+          }
+        })
+      .d-flex.flex-column
+        span
+          i.fa-solid.fa-calendar.me-1
+          span Ne Zaman?
+        input.trip-finder_date(type='text')
+      .trip-finder_day-buttons
+        button(type='button').trip-finder_day-button(data-day='today') Bugün
+        button(type='button').trip-finder_day-button(data-day='tomorrow') Yarın
+      button.trip-finder_search-button ARA
+
+block content
+
+block scripts
+  script(src='/js/index.js')
