--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,6 +7,7 @@ html
     link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css')
     link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css')
     link(rel='stylesheet' href='/css/style.css')
+    link(rel='stylesheet' href='/css/place-select.css')
     block css
   body
     .gtr-header
@@ -14,15 +15,16 @@ html
         a.navbar-brand(href="/")
           img(src="/images/gotur_vip_logo_white.png" alt="GÖTÜR")
         .d-flex.gap-3.align-items-center
-          a.gtr-link 
+          a.gtr-link
             i.fa-solid.fa-magnifying-glass.me-1
             |Biletimi Bul
-          a.gtr-link 
+          a.gtr-link
             i.fa-solid.fa-user-check.me-1
             |Giriş Yap
-          a.gtr-link 
+          a.gtr-link
             i.fa-solid.fa-user-plus.me-1
             |Kayıt Ol
+      block headerContent
 
 
     block content
@@ -34,4 +36,5 @@ html
     script(src="/select2/dist/js/select2.min.js")
     script(src="/flatpickr/dist/flatpickr.min.js")
     script(src="/flatpickr/dist/l10n/tr.js")
+    script(src="/js/place-select.js")
     block scripts
