--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,10 @@
 html
   head
     title= title
+    link(rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png")
+    link(rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png")
+    link(rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png")
+    link(rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon")
     link(rel='stylesheet' href='/flatpickr/dist/flatpickr.min.css')
     link(rel='stylesheet' href='/select2/dist/css/select2.min.css')
     link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css')
