--- a/views/index.pug
+++ b/views/index.pug
@@ -1,9 +1,4 @@
-extends layout
-
 include components/place-select
-
-block css
-  link(rel='stylesheet' href='/css/index.css')
 
 <!DOCTYPE html>
 html
@@ -19,6 +14,7 @@ html
     link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css')
     link(rel='stylesheet' href='/css/style.css')
     link(rel='stylesheet' href='/css/index.css')
+    link(rel='stylesheet' href='/css/place-select.css')
   body
     .gtr-header
       .d-flex.justify-content-between
@@ -75,7 +71,12 @@ html
             button(type='button').trip-finder_day-button(data-day='today') Bugün
             button(type='button').trip-finder_day-button(data-day='tomorrow') Yarın
           button.trip-finder_search-button ARA
-block content
-
-block scripts
+  script(src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js")
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js")
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/js/all.min.js")
+  script(src="https://code.jquery.com/jquery-3.7.1.min.js")
+  script(src="/select2/dist/js/select2.min.js")
+  script(src="/flatpickr/dist/flatpickr.min.js")
+  script(src="/flatpickr/dist/l10n/tr.js")
+  script(src="/js/place-select.js")
   script(src='/js/index.js')
