--- a/views/index.pug
+++ b/views/index.pug
@@ -1,4 +1,5 @@
 include components/place-select
+include components/auth-modals
 
 <!DOCTYPE html>
 html
@@ -24,53 +25,54 @@ html
           a.gtr-link 
             i.fa-solid.fa-magnifying-glass.me-1
             |Biletimi Bul
-          a.gtr-link 
+          a.gtr-link(href='javascript:void(0)' role='button' data-bs-toggle='modal' data-bs-target='#loginModal')
             i.fa-solid.fa-user-check.me-1
             |Giriş Yap
-          a.gtr-link 
+          a.gtr-link(href='javascript:void(0)' role='button' data-bs-toggle='modal' data-bs-target='#registerModal')
             i.fa-solid.fa-user-plus.me-1
             |Kayıt Ol
-      - const fromValue = typeof fromId !== 'undefined' ? fromId : '';
-      - const toValue = typeof toId !== 'undefined' ? toId : '';
-      .trip-finder.border
-        .trip-finder_selects
-          .d-flex.flex-column
-            span
-              i.fa-solid.fa-bus-side.me-1
-              span Nereden?
-            +placeSelect({
-              placeholder: 'Kalkış Seçin',
-              searchPlaceholder: 'İl-ilçe adı yazın...',
-              input: {
-                class: 'trip-finder_from',
-                name: 'from',
-                value: fromValue
-              }
-            })
-          span.trip-finder_change
-            i.fa-solid.fa-arrow-right-arrow-left
-          .d-flex.flex-column
-            span
-              i.fa-solid.fa-bus-side.me-1
-              span Nereye?
-            +placeSelect({
-              placeholder: 'Varış Seçin',
-              searchPlaceholder: 'İl-ilçe adı yazın...',
-              input: {
-                class: 'trip-finder_to',
-                name: 'to',
-                value: toValue
-              }
-            })
-          .d-flex.flex-column
-            span
-              i.fa-solid.fa-calendar.me-1
-              span Ne Zaman?
-            input.trip-finder_date(type='text')
-          .trip-finder_day-buttons
-            button(type='button').trip-finder_day-button(data-day='today') Bugün
-            button(type='button').trip-finder_day-button(data-day='tomorrow') Yarın
-          button.trip-finder_search-button ARA
+    +authModals()
+    - const fromValue = typeof fromId !== 'undefined' ? fromId : '';
+    - const toValue = typeof toId !== 'undefined' ? toId : '';
+    .trip-finder.border
+      .trip-finder_selects
+        .d-flex.flex-column
+          span
+            i.fa-solid.fa-bus-side.me-1
+            span Nereden?
+          +placeSelect({
+            placeholder: 'Kalkış Seçin',
+            searchPlaceholder: 'İl-ilçe adı yazın...',
+            input: {
+              class: 'trip-finder_from',
+              name: 'from',
+              value: fromValue
+            }
+          })
+        span.trip-finder_change
+          i.fa-solid.fa-arrow-right-arrow-left
+        .d-flex.flex-column
+          span
+            i.fa-solid.fa-bus-side.me-1
+            span Nereye?
+          +placeSelect({
+            placeholder: 'Varış Seçin',
+            searchPlaceholder: 'İl-ilçe adı yazın...',
+            input: {
+              class: 'trip-finder_to',
+              name: 'to',
+              value: toValue
+            }
+          })
+        .d-flex.flex-column
+          span
+            i.fa-solid.fa-calendar.me-1
+            span Ne Zaman?
+          input.trip-finder_date(type='text')
+        .trip-finder_day-buttons
+          button(type='button').trip-finder_day-button(data-day='today') Bugün
+          button(type='button').trip-finder_day-button(data-day='tomorrow') Yarın
+        button.trip-finder_search-button ARA
   script(src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/js/all.min.js")
