--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,3 +1,5 @@
+include components/auth-modals
+
 <!DOCTYPE html>
 html
   head
@@ -22,16 +24,18 @@ html
           a.gtr-link
             i.fa-solid.fa-magnifying-glass.me-1
             |Biletimi Bul
-          a.gtr-link
+          a.gtr-link(href='javascript:void(0)' role='button' data-bs-toggle='modal' data-bs-target='#loginModal')
             i.fa-solid.fa-user-check.me-1
             |Giriş Yap
-          a.gtr-link
+          a.gtr-link(href='javascript:void(0)' role='button' data-bs-toggle='modal' data-bs-target='#registerModal')
             i.fa-solid.fa-user-plus.me-1
             |Kayıt Ol
       block headerContent
 
 
     block content
+
+    +authModals()
 
     script(src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js")
