--- a/views/layout_invert.pug
+++ b/views/layout_invert.pug
@@ -1,3 +1,5 @@
+include components/auth-modals
+
 <!DOCTYPE html>
 html
   head
@@ -15,19 +17,21 @@ html
       .d-flex.justify-content-between
         img(src="/images/gotur_vip_logo.png" alt="GÖTÜR")
         .d-flex.gap-3.align-items-center
-          a.gtr-link 
+          a.gtr-link
             i.fa-solid.fa-magnifying-glass.me-1
             |Biletimi Bul
-          a.gtr-link 
+          a.gtr-link(href='javascript:void(0)' role='button' data-bs-toggle='modal' data-bs-target='#loginModal')
             i.fa-solid.fa-user-check.me-1
             |Giriş Yap
-          a.gtr-link 
+          a.gtr-link(href='javascript:void(0)' role='button' data-bs-toggle='modal' data-bs-target='#registerModal')
             i.fa-solid.fa-user-plus.me-1
             |Kayıt Ol
 
 
     .container
       block content
+
+    +authModals()
 
     script(src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js")
